--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,13 @@
 
 <% content_for :title, "Tasks" %>
 
-<h1>Tasks</h1>
+<h1>Tasks Manager</h1>
+
+<p>
+  <%= link_to "ALL",  tasks_path %>
+  <%= link_to "Active", tasks_path(filter: "active" ) %> |
+  <%= link_to "Completed", tasks_path(filter: "completed" ) %>
+</p>
 
 <div id="tasks">
   <% @tasks.each do |task| %>
